--- a/css/avn.css
+++ b/css/avn.css
@@ -193,6 +193,54 @@ h1{
         width: 90%; /* Почти на всю ширину экрана */
     }
 }
+@media(max-width:420px){
+   body{
+    background: url('https://bogatyr.club/uploads/posts/2023-02/thumbs/1675452660_bogatyr-club-p-fon-obrazovanie-fon-vkontakte-11.jpg') 
+    no-repeat center center/cover;
+    width: max-content;
+    
+   }
+    header{
+        width: 100%;
+        height: 20px;
+        font-size: 7px;
+        border-radius:  0 0 15px 15px;
+        justify-content: center;
+        align-items: center;
+    }
+    header img{
+       width: 40px;
+       height: 40px;
+    }
+    .container{
+        display: flex;
+        flex-direction: column;
+        font-size: 10px;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        margin-left: 20px;
+        margin-right: -30px;
+    }
+    .wind{
+        display:flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100px;
+        font-size: 1px;
+        gap: 1px;
+        
+        
+    }
+   .wind img{
+        width: 70px;
+        height: 70px;
+    }
+    .wind a{
+        font-size: 15px;
+    }
+
+}
 
 
 
